# Sentiment-Evaluation-Challenge-

./: Antonio_Sirignano_model.pickle  LICENSE  README.md  main_eval.py  main_train.py  pyproject.toml
Artifacts/: best_params.json  gridsearch_results.csv  train_metrics.json
